--- a/src/res/default-detailview.html
+++ b/src/res/default-detailview.html
@@ -1,5 +1,62 @@
-<html><head><meta name="qrichtext" content="1" /><style type="text/css">
-p, li { white-space: pre-wrap; }
-</style></head><body style=" font-family:'Verdana'; font-size:9pt; font-weight:400; font-style:normal;">
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;"><span style=" font-weight:600;">Group:</span> %group% <span style=" font-weight:600;">Title:</span> %title% <span style=" font-weight:600;">Username:</span> %username% <span style=" font-weight:600;">Password:</span> %password% <span style=" font-weight:600;">URL:</span> %url% <span style=" font-weight:600; color:#000000;">Creation:</span> %creation% <span style=" font-weight:600;">Last Access:</span> %lastaccess% <span style=" font-weight:600;">Last Modification:</span> %lastmod% <span style=" font-weight:600;">Expiration:</span> %expire% <span style=" font-weight:600;"><br>Comment:</span></p>
-<p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">%comment%</p></body></html>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN">
+<html>
+<head>
+  <style type="text/css">
+    .headertitle {
+      color : #ffffff;
+      font-family : Tahoma, Verdana, Arial;
+      font-size : 14px;
+      font-weight : bold;
+    }
+    .fieldname {
+      font-family : Tahoma, Verdana, Arial;
+      font-size : 10px;
+      font-weight : bold;
+    }
+    .fieldvalue {
+      font-family : Tahoma, Verdana, Arial;
+      font-size : 10px;
+    }
+  </style>
+</head>
+
+<body>
+  <table width="100%" align="left" border="0" cellspacing="0" cellpadding="3">
+    <tr><td bgcolor="#808080" class="headertitle">%title%</td></tr>
+  </table>
+  <table width="100%" align="left" border="0" cellspacing="3" cellpadding="0">
+    <tr>
+      <td width="10%" class="fieldname">Group:</td>
+      <td width="40%" class="fieldvalue">%group%</td>
+      <td width="10%" class="fieldname">Creation:</td>
+      <td width="40%" class="fieldvalue">%creation%</td>
+    </tr>
+    <tr>
+      <td width="10%" class="fieldname">Username:</td>
+      <td width="40%" class="fieldvalue">%username%</td>
+      <td width="10%" class="fieldname">Access:</td>
+      <td width="40%" class="fieldvalue">%lastaccess%</td>
+    </tr>
+    <tr>
+      <td width="10%" class="fieldname">Password:</td>
+      <td width="40%" class="fieldvalue">%password%</td>
+      <td width="10%" class="fieldname">Modification:</td>
+      <td width="40%" class="fieldvalue">%creation%</td>
+    </tr>
+    <tr>
+      <td width="10%" class="fieldname">Attachment:</td>
+      <td width="40%" class="fieldvalue">%attachment%</td>
+      <td width="10%" class="fieldname">Expiration:</td>
+      <td width="40%" class="fieldvalue">%expire% [%expire-timeleft%]</td>
+    </tr>
+    <tr>
+      <td width="10%" class="fieldname">URL:</td>
+      <td width="90%" colspan="3"  class="fieldvalue"><a href="%url%">%url%</a></td>
+    </tr>
+    <tr>
+      <td width="10%" class="fieldname">Comment:</td>
+      <td width="90%" colspan="3"  class="fieldvalue">%comment%</td>
+    </tr>
+  </table>
+</body>
+</html>
