Added action "Copy URL to Clipboard" (closes #1944021) Fixed: Unnamed Database saved as ".kdb" (closes #2109972, #2118340) Fixed: Date of Modification isn't updated (closes #2108658, #2121768) Fixed and improved the initialization of the fallback random number source (closes #2091784) Don't clear clipboard if "Clear clipboard after" is set to 0 Try to clear Klipper history when clearing clipboard
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@220 b624d157-de02-0410-bad0-e51aec6abb33

--- a/src/res/default-detailview.html
+++ b/src/res/default-detailview.html
@@ -41,7 +41,7 @@
       <td width="10%" class="fieldname">Password:</td>
       <td width="40%" class="fieldvalue">%password%</td>
       <td width="10%" class="fieldname">Modification:</td>
-      <td width="40%" class="fieldvalue">%creation%</td>
+      <td width="40%" class="fieldvalue">%lastmod%</td>
     </tr>
     <tr>
       <td width="10%" class="fieldname">Attachment:</td>
