--- a/share/keepassx/license.html
+++ b/share/keepassx/license.html
@@ -1,5 +1,5 @@
-Copyright (C) 2005-2007 Tarek Saidi <tarek.saidi@arcor.de>
-Copyright (C) 2007-2008 Felix Geyer
+<html><pre>Copyright (C) 2005-2007 Tarek Saidi &lt;tarek.saidi@arcor.de&gt;
+Copyright (C) 2007-2008 Felix Geyer &lt;debfx-keepassx@fobos.de&gt;
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
@@ -22,13 +22,13 @@ crypto/aes*:
 	3-clause BSD license
 
 crypto/arcfour*:
-	Copyright (C) 2003-2008 Dominik Reichl <dominik.reichl@t-online.de>
+	Copyright (C) 2003-2008 Dominik Reichl &lt;dominik.reichl@t-online.de&gt;
 	GPLv2 or later
 
 crypto/blowfish*:
 	Copyright (C) 1998, 2001, 2002 Free Software Foundation, Inc.
 	Copyright (C) 2003 by Michael Buesch
-	Copyright (C) 2007 by Tarek Saidi <tarek.saidi@arcor.de>
+	Copyright (C) 2007 by Tarek Saidi &lt;tarek.saidi@arcor.de&gt;
 	GPLv2
 
 crypto/sha256*:
@@ -37,12 +37,12 @@ crypto/sha256*:
 	GPLv2
 
 crypto/two*:
-	Copyright (C) 2005-2007 Tarek Saidi <tarek.saidi@arcor.de>
-	Copyright (c) 2003,2004 Dominik Reichl <dominik.reichl@t-online.de>
+	Copyright (C) 2005-2007 Tarek Saidi &lt;tarek.saidi@arcor.de&gt;
+	Copyright (c) 2003,2004 Dominik Reichl &lt;dominik.reichl@t-online.de&gt;
 	GPLv2
 
 crypto/yarrow*:
-	Copyright (C) 2007 Tarek Saidi <tarek.saidi@arcor.de>
+	Copyright (C) 2007 Tarek Saidi &lt;tarek.saidi@arcor.de>
 	Copyright (C) 2001 Niels Müler
 	GPLv2
 
@@ -327,4 +327,4 @@ YOU OR THIRD PARTIES OR A FAILURE OF THE PROGRAM TO OPERATE WITH ANY OTHER
 PROGRAMS), EVEN IF SUCH HOLDER OR OTHER PARTY HAS BEEN ADVISED OF THE
 POSSIBILITY OF SUCH DAMAGES.
 
-		     END OF TERMS AND CONDITIONS
+		     END OF TERMS AND CONDITIONS</pre></html>
