Fix: Entropy collection didn't work for pronounceable password generator
git-svn-id: https://svn.code.sf.net/p/keepassx/code/trunk@273 b624d157-de02-0410-bad0-e51aec6abb33

--- a/share/keepassx/license.html
+++ b/share/keepassx/license.html
@@ -1,5 +1,5 @@
-<html><pre>Copyright (C) 2005-2007 Tarek Saidi &lt;tarek.saidi@arcor.de&gt;
-Copyright (C) 2007-2008 Felix Geyer &lt;debfx-keepassx@fobos.de&gt;
+<html><pre>Copyright (C) 2005-2008 Tarek Saidi &lt;tarek.saidi@arcor.de&gt;
+Copyright (C) 2007-2009 Felix Geyer &lt;debfx-keepassx {at} fobos.de&gt;
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
